Workspace_t type for user param struct, 'code_dir' argument for generate_code()

--- a/TEMPLATE/CMakeLists.txt
+++ b/TEMPLATE/CMakeLists.txt
@@ -3,4 +3,6 @@ cmake_minimum_required (VERSION 3.5)
 
 project (cvxpygen)
 
+include_directories (include)
+
 add_executable (example src/example.c src/work.c src/update.c src/solve.c)
