--- a/TEMPLATE/CMakeLists.txt
+++ b/TEMPLATE/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories (include OSQP_code/include)
 
 add_subdirectory (OSQP_code)
 
-add_executable (cpg_example src/cpg_example.c src/cpg_workspace.c src/cpg_update.c src/cpg_solve.c ${osqp_src})
+add_executable (cpg_example src/cpg_example.c src/cpg_workspace.c src/cpg_solve.c ${osqp_src})
