Using pybind11 package in env instead of submodule.

--- a/TEMPLATE/c/CMakeLists.txt
+++ b/TEMPLATE/c/CMakeLists.txt
@@ -3,12 +3,12 @@ cmake_minimum_required (VERSION 3.5)
 
 project (cvxpygen)
 
+set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/out)
+
 include_directories (include OSQP_code/include)
 
 add_subdirectory (OSQP_code)
 
 add_executable (cpg_example src/cpg_example.c src/cpg_workspace.c src/cpg_solve.c ${osqp_src})
 
-add_subdirectory(pybind11)
-
-pybind11_add_module(cpg_module src/cpg_module.cpp src/cpg_workspace.c src/cpg_solve.c ${osqp_src})
+add_library(cpg STATIC src/cpg_workspace.c src/cpg_solve.c ${osqp_src})
