--- a/TEMPLATE/c/CMakeLists.txt
+++ b/TEMPLATE/c/CMakeLists.txt
@@ -5,6 +5,10 @@ project (cvxpygen)
 
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/out)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)  # -fPIC
+
 include_directories (include OSQP_code/include)
 
 add_subdirectory (OSQP_code)
