--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build_and_test:
 
-    runs-on: [ ubuntu-latest, macos-latest ]
+    runs-on: [ ubuntu-latest ]
 
     steps:
     - uses: actions/checkout@v2
