--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,10 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - cmake
-  - cvxpy
-  - ipykernel
-  - jupyter
-  - matplotlib
-  - pybind11
+  - python>=3.6
+  - cmake>=3.5
+  - cvxpy>=1.1.18
+  - ipykernel>=6.0.0
+  - jupyter>=1.0.0
+  - matplotlib>=3.1.3
+  - pybind11>=2.8.0
