Windows: Using latest installed version of VS w/ MSVC.

--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -7,9 +7,11 @@ cmake_minimum_required (VERSION 3.5)
 project (cvxpygen)
 
 # compiler configuration
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
-set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")
-set (CMAKE_C_STANDARD_LIBRARIES "${CMAKE_C_STANDARD_LIBRARIES} -lm")
+if (NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
+    set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")
+    set (CMAKE_C_STANDARD_LIBRARIES "${CMAKE_C_STANDARD_LIBRARIES} -lm")
+endif()
 set (CMAKE_POSITION_INDEPENDENT_CODE ON)  # -fPIC
 set (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/out)
 
