Ready for packaging.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,24 @@
 include *.yml
 include LICENSE
 include cvxpygen/template/*
-include examples/*.ipynb
-include examples/*.py
-include examples/visualization/*.py
-include tests/*.py
+include cvxpygen/solvers/osqp-python/LICENSE
+include cvxpygen/solvers/scs/*
+include cvxpygen/solvers/scs/cmake/*.cmake
+include cvxpygen/solvers/scs/src/*.c
+include cvxpygen/solvers/scs/include/*.h
+include cvxpygen/solvers/scs/linsys/*
+include cvxpygen/solvers/scs/linsys/cpu/direct/*
+include cvxpygen/solvers/scs/linsys/cpu/indirect/*
+include cvxpygen/solvers/scs/linsys/external/amd/*
+include cvxpygen/solvers/scs/linsys/external/qdldl/*
+include cvxpygen/solvers/ecos/*
+include cvxpygen/solvers/ecos/src/*.c
+include cvxpygen/solvers/ecos/include/*.h
+include cvxpygen/solvers/ecos/external/amd/*
+include cvxpygen/solvers/ecos/external/amd/src/*.c
+include cvxpygen/solvers/ecos/external/amd/include/*.h
+include cvxpygen/solvers/ecos/external/ldl/*
+include cvxpygen/solvers/ecos/external/ldl/src/*.c
+include cvxpygen/solvers/ecos/external/ldl/include/*.h
+include cvxpygen/solvers/ecos/external/SuiteSparse_config/*
+include cvxpygen/solvers/ecos/ecos_bb/*
