--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - python>=3.6
-  - cmake>=3.5
+  - python>=3.7
+  - cmake
   - cvxpy>=1.3
   - pybind11>=2.8.0
