--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install dependencies (Linux)
       if: runner.os == 'Linux'
       run: |
-        sudo conda env update --file environment.yml --name base
+        python setup.py install
 
     - name: Install dependencies (macOS)
       if: runner.os == 'macOS'
@@ -53,7 +53,7 @@ jobs:
     - name: Test with pytest (Linux)
       if: runner.os == 'Linux'
       run: |
-        sudo conda install pytest
+        pip install pytest
         cd tests
         $CONDA/bin/pytest
 
