--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,13 +42,12 @@ jobs:
     - name: Install dependencies (macOS)
       if: runner.os == 'macOS'
       run: |
-        sudo conda env update --file environment.yml --name base
+        python setup.py install
 
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
       run: |
-        C:\Miniconda\condabin\conda.bat env update --file environment.yml --name base
-        C:\Miniconda\condabin\conda.bat init powershell
+        python setup.py install
 
     - name: Test with pytest (Linux)
       if: runner.os == 'Linux'
@@ -67,7 +66,6 @@ jobs:
     - name: Test with pytest (Windows)
       if: runner.os == 'Windows'
       run: |
-        C:\Miniconda\condabin\conda.bat activate base
-        C:\Miniconda\condabin\conda.bat install pytest
+        pip install pytest
         cd tests
-        C:\Miniconda\Scripts\pytest
+        pytest
