--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "solvers/ecos"]
+[submodule "cvxpygen/solvers/ecos"]
 	path = cvxpygen/solvers/ecos
 	url = https://github.com/embotech/ecos
-[submodule "solvers/osqp-python"]
+[submodule "cvxpygen/solvers/osqp-python"]
 	path = cvxpygen/solvers/osqp-python
 	url = https://github.com/osqp/osqp-python
-[submodule "solvers/scs"]
+[submodule "cvxpygen/solvers/scs"]
 	path = cvxpygen/solvers/scs
 	url = https://github.com/cvxgrp/scs
+[submodule "cvxpygen/solvers/Clarabel.cpp"]
+	path = cvxpygen/solvers/Clarabel.cpp
+	url = https://github.com/oxfordcontrol/Clarabel.cpp.git
