--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -23,3 +23,30 @@ include cvxpygen/solvers/ecos/external/ldl/src/*.c
 include cvxpygen/solvers/ecos/external/ldl/include/*.h
 include cvxpygen/solvers/ecos/external/SuiteSparse_config/*
 include cvxpygen/solvers/ecos/ecos_bb/*
+include cvxpygen/solvers/Clarabel.cpp/*
+include cvxpygen/solvers/Clarabel.cpp/include/Clarabel
+include cvxpygen/solvers/Clarabel.cpp/include/c/*.h
+include cvxpygen/solvers/Clarabel.cpp/rust_wrapper/*
+include cvxpygen/solvers/Clarabel.cpp/rust_wrapper/src/*.rs
+include cvxpygen/solvers/Clarabel.cpp/rust_wrapper/src/solver/*.rs
+include cvxpygen/solvers/Clarabel.cpp/rust_wrapper/src/solver/implementations/*.rs
+include cvxpygen/solvers/Clarabel.cpp/rust_wrapper/src/solver/implementations/default/*.rs
+include cvxpygen/solvers/Clarabel.cpp/rust_wrapper/src/utils/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/*.toml
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/algebra/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/algebra/csc/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/algebra/dense/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/algebra/densesym3x3/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/qdldl/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/core/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/core/cones/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/core/kktsolvers/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/core/kktsolvers/direct/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/core/kktsolvers/direct/quasidef/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/core/kktsolvers/direct/quasidef/ldlsolvers/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/implementations/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/implementations/default/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/solver/utils/*.rs
+include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/timers/*.rs
