--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Test with pytest (macOS)
       if: runner.os == 'macOS'
       run: |
-        sudo conda install pytest
+        pip install pytest
         cd tests
         $CONDA/bin/pytest
 
