--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,5 @@
 [metadata]
-description-file = README.md
+description = Code generation with CVXPY
+long_description = file: README.md
+long_description_content_type = text/markdown
+license_file = LICENSE
