--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-13, windows-latest ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
 
     steps:
     - name: Checkout repository and submodules
@@ -39,21 +39,21 @@ jobs:
       run: |
         sudo apt install libeigen3-dev
         python setup.py install
-        pip install cvxpylayers torch==2.2 jax
+        pip install cvxpylayers torch==2.3 jax
 
     - name: Install dependencies (macOS)
       if: runner.os == 'macOS'
       run: |
         brew install eigen
         python setup.py install
-        pip install cvxpylayers torch==2.2 jax
+        pip install cvxpylayers torch==2.3 jax
 
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
       run: |
         vcpkg install eigen3:x64-windows
         python setup.py install
-        pip install cvxpylayers torch==2.2 jax
+        pip install cvxpylayers torch==2.3 jax
 
     - name: Test with pytest (Linux)
       if: runner.os == 'Linux'
