--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-13, windows-latest ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
 
     steps:
     - name: Checkout repository and submodules
@@ -46,7 +46,6 @@ jobs:
       run: |
         brew install eigen
         python setup.py install
-        pip install cvxpylayers torch==2.3 jax
 
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
@@ -67,7 +66,7 @@ jobs:
       run: |
         pip install pytest
         cd tests
-        python -m pytest
+        python -m pytest test_E2E_LP.py test_E2E_QP.py test_E2E_SOCP.py
 
     - name: Test with pytest (Windows)
       if: runner.os == 'Windows'
