--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -59,5 +59,6 @@ include cvxpygen/solvers/qoco/examples/*
 include cvxpygen/solvers/qoco/lib/*
 include cvxpygen/solvers/qoco/lib/amd/*
 include cvxpygen/solvers/qoco/lib/qdldl/*
+include cvxpygen/solvers/qoco/lib/qdldl/configure/*.in
 include cvxpygen/solvers/qoco/lib/qdldl/include/*.h
 include cvxpygen/solvers/qoco/lib/qdldl/src/*.c
