--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
+        cache: 'pip'
 
     - name: Add conda to system path
       run: |
@@ -39,7 +40,7 @@ jobs:
       run: |
         sudo apt install libeigen3-dev
         python setup.py install
-        pip install cvxpylayers torch==2.3 jax==0.5.3
+        pip install cvxpylayers torch>=2.3 jax==0.5.3
 
     - name: Install dependencies (macOS)
       if: runner.os == 'macOS'
