--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
   "scipy >= 1.13.1",
   "numpy >= 1.26.0",
   "qocogen >= 0.1.9",
-  "qoco >= 0.1.4"
+  "qoco >= 0.1.4",
+  "pdaqp >= 0.6.3"
 ]
 
 [project.optional-dependencies]
