--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,13 +59,13 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         cd tests
-        $CONDA/bin/pytest
+        $CONDA/bin/pytest test_E2E_LP.py test_E2E_QP.py test_E2E_SOCP.py test_diff.py
 
     - name: Test with pytest (macOS)
       if: runner.os == 'macOS'
       run: |
         cd tests
-        python -m pytest test_E2E_LP.py test_E2E_QP.py test_E2E_SOCP.py
+        python -m pytest test_E2E_LP.py test_E2E_QP.py test_E2E_SOCP.py test_diff.py test_MPQP.py
 
     - name: Test with pytest (Windows)
       if: runner.os == 'Windows'
