--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ authors = [
   { name = "Bartolomeo Stellato", email = "bstellato@princeton.edu" },
   { name = "Steven Diamond", email = "diamond@cs.stanford.edu" },
   { name = "Akshay Agrawal", email = "akshayka@cs.stanford.edu" },
-  { name = "Stephen Boyd", email = "boyd@stanford.edu" }
+  { name = "Stephen Boyd", email = "boyd@stanford.edu" },
 ]
 urls = { Homepage = "https://github.com/cvxgrp/cvxpygen" }
 
@@ -30,11 +30,20 @@ dependencies = [
   "numpy >= 1.26.0",
   "qocogen >= 0.1.9",
   "qoco >= 0.1.4",
-  "pdaqp >= 0.6.4"
+  "pdaqp >= 0.6.4",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest == 6.2.4"]
+doc = [
+  "sphinx >= 8.0.0",
+  "sphinxcontrib.jquery >= 4.1.0",
+  "sphinx-inline-tabs >= 2023.4.21",
+  "sphinx-design >= 0.6.1",
+  "sphinx-immaterial >= 0.13.5",
+  "myst-parser >= 4.0.0",
+  "sphinx-autobuild>=2024.10.3",
+]
 
 [tool.setuptools]
 packages = ["cvxpygen"]
