Replace `pickle` with `dill` for serialization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
   "numpy >= 1.26.0",
   "qocogen >= 0.1.9",
   "qoco >= 0.1.4",
-  "pdaqp >= 0.6.6"
+  "pdaqp >= 0.6.6",
+  "dill>=0.4.0",
 ]
 
 [project.optional-dependencies]
