--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -54,6 +54,7 @@ include cvxpygen/solvers/Clarabel.cpp/Clarabel.rs/src/timers/*.rs
 include cvxpygen/solvers/qoco/*
 include cvxpygen/solvers/qoco/src/*.c
 include cvxpygen/solvers/qoco/include/*.h
+include cvxpygen/solvers/qoco/algebra/*
 include cvxpygen/solvers/qoco/configure/*
 include cvxpygen/solvers/qoco/lib/*
 include cvxpygen/solvers/qoco/lib/amd/*
