Refactor: Reorganize scripts folder structure
Changes:
- Reorganized scripts folder with new modular structure
  * Added: generate.py (main entry point)
  * Added: hwgen/ (hardware generation module)
  * Added: bst_sol/ (BST solver module)
  * Added: config/ (configuration module)
  * Added: interface/ (interface module)
  * Added: README.md (documentation)

- Removed old generator scripts
  * Deleted: auto_select_generator.py
  * Deleted: generate_*.py (multiple old generators)
  * Deleted: pdaqp_constraint_gen.py
  * Deleted: sw_scripts/ (software scripts)
  * Deleted: sw_tb_gen/ (testbench generation)

- Updated .gitignore
  * Excluded all test and generated files
  * Excluded regression folders
  * Excluded hardware generation outputs

Old code structure preserved in tag: v1.0-before-refactor

Note: Test files and regression outputs are not tracked in this commit

--- a/HWGen/.gitignore
+++ b/HWGen/.gitignore
@@ -13,3 +13,40 @@ obj_dir/
 # Python
 __pycache__/
 *.pyc
+
+# ========================================
+# Hardware generation and test outputs
+# Added: 2026-01-29
+# ========================================
+
+# All regression test folders
+regression/
+regression_fp16/
+regression_fp32/
+regression_old/
+
+# Code generation outputs
+codegen_pid/
+codegen_pid_fp16/
+codegen_pid_fp32/
+codegen_pid_old/
+
+# Floating point modules
+fp_mac/
+fp_ops/
+
+# Build files
+mk/
+Makefile
+
+# MPC examples
+mpc_drone/
+
+# Power analysis outputs
+power/
+power_fp16/
+power_fp32/
+power_old/
+
+# Old scripts backup
+scripts_old/
